--- a/host-app/src/App.css
+++ b/host-app/src/App.css
@@ -20,8 +20,12 @@
   background: #3a3a3a; /* Slightly lighter grey for the wrapper */
   padding: 15px;
   margin: 10px 0;
+  margin-right: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+.remote-components {
+  display: flex;
 }
 
 .app-link {
