--- a/calendar-app/src/App.css
+++ b/calendar-app/src/App.css
@@ -3,8 +3,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 110vh;
   background-color: #f0f0f0;
+  max-width: 100%; /* Limiting the width */
+  max-height: 100%; /* Limiting the height */
+  overflow: auto;
 }
 
 .calendar {
